Changing project to react redux

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using BagMyFood
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using BagMyFood
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
