--- a/webapp/src/components/Header.scss
+++ b/webapp/src/components/Header.scss
@@ -1,28 +1,33 @@
 @import '../common/styles/colors.scss';
+@import '../common/styles/css/materialize.css';
 
 .header-container {
-    background-color: $header-green;
-    width: 100%;
-    height: 50px;
-    display: table;
+    background-color: $primary-background;
+    height: 75px;
+    display: flex;
+    text-align: center;
     padding-top: 2px;
+    align-items: center;
 
     .main-menu-container {
-        text-align: center;
-        display: table-cell;
-        vertical-align: middle;
-        font-family: sans-serif;
+        flex-grow: 10;
         font-size: 40px;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        padding-left: 50px;
+        font-family: roboto;
+        color: white;
+        max-width: 50%;
     };
 
-    .accounts-cart-container {
-        text-align: right;
-        display: table-cell;
-        vertical-align: middle;;
-        padding-right: 20px;
-        width: 200px;
+    .menu-buttons-container {
+        flex-grow: 1;
+
+        .buttons {
+            background-color: $primary-buttons
+        }
+    }
+
+    .name-container {
+        flex-grow: 1;
+        font-family: roboto;
+        color: white;
     }
 }
