--- a/webapp/src/components/Header.scss
+++ b/webapp/src/components/Header.scss
@@ -19,9 +19,12 @@
 
     .menu-buttons-container {
         flex-grow: 1;
+        display: flex;
+        justify-content: space-evenly;
+        flex: 1 1 20%;
 
         .buttons {
-            background-color: $primary-buttons
+            background-color: $primary-buttons;    
         }
     }
 
